<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.AddMeetingActivity">

    <LinearLayout
        android:id="@+id/addPageMeeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tittleAddPageText"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:gravity="center"
            android:background="#2E5F95"
            android:layout_marginTop="15dp"
            android:text="@string/new_meeting"
            android:textColor="#F7F8FA"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameMeeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/frame_blue"
                android:paddingBottom="20dp"
                android:ems="10"
                android:gravity="bottom"
                android:hint="@string/meeting_name"
                android:inputType="text"
                android:textColor="#2E5F95"
                android:textSize="20sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColorHint="@color/black"
            android:background ="@drawable/frame_blue"
            app:boxBackgroundMode="outline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_meeting_room_24"
            app:startIconTint="@color/black">

            <AutoCompleteTextView
                android:id="@+id/auto_complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/salle_de_r_union"
                android:inputType="none"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold">

            </AutoCompleteTextView>


        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/date_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/frame_blue"
                android:drawableStart="@drawable/calendar_black"
                android:drawablePadding="2dp"
                android:ems="8"
                android:gravity="center"
                android:hint="@string/date_sign"
                android:inputType="date"
                android:textColor="#2E5F95"
                android:textStyle="bold"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/time_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="70dp"

                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/frame_blue"
                android:drawableStart="@drawable/ic_baseline_more_time_24"
                android:gravity="center"
                android:drawablePadding="5dp"
                android:ems="79"
                android:hint="@string/time_sign"
                android:inputType="date"
                android:textColor="#2E5F95"
                android:textStyle="bold"
                android:textColorHint="@color/black" />

        </LinearLayout>





        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mailParticipant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background ="@drawable/frame_blue"
                android:ems="10"
                android:hint="@string/mails_participants"
                android:inputType="textMultiLine"
                android:lines="5"
                android:textSize="18sp"
                android:textStyle="bold"
                android:minLines="5"
                android:gravity="top"/>

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:backgroundTint="#2E5F95"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/buttonstyle"
            android:text="@string/add_button"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="20dp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>